--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,11 @@ future
 bvh==0.3
 scipy==1.5.1
 gym==0.10.5
-mujoco-py==2.0.2.9
+mujoco-py==2.1.2.14 #2.0.2.9
 opencv-python==3.4.11.43
 torch==1.6.0
 tensorboard==2.0
+cython<3
+protobuf==3.20.0
+numpy==1.23.5
+tqdm
