added bipedal test

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,6 @@
 {
     "configurations": [
+
         
         {
             "type": "debugpy",
@@ -11,6 +12,14 @@
                 "--cfg",
                 "${input:configFile}"
             ],
+            "console": "integratedTerminal"
+        },
+        {
+            "type": "debugpy",
+            "request": "launch",
+            "name": "test biped.py",
+            "python":"/home/xliu227/miniconda3/envs/rfc/bin/python", 
+            "program": "${workspaceFolder}/mujoco_test/13_2D_biped/biped.py",
             "console": "integratedTerminal"
         },
         {
