data reader visuakiz seskeleton

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,12 @@
 {
     "configurations": [
+
         {
             "type": "debugpy",
             "request": "launch",
             "name": "test nrel data reader",
             "python":"/home/xliu227/miniconda3/envs/rfc/bin/python", 
-            "program": "${workspaceFolder}/data/nrel/data_check.py",
+            "program": "${workspaceFolder}/mujoco_test/data_read.py",
             "console": "integratedTerminal"
         },
 
