--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,8 @@
 {
     "configurations": [
 
+
+
         {
             "type": "debugpy",
             "request": "launch",
@@ -16,11 +18,7 @@
             "request": "launch",
             "name": "Launch motion_im.py",
             "python":"/home/xliu227/miniconda3/envs/rfc/bin/python", 
-            "program": "${workspaceFolder}/normalitation/normal.py",
-            "args": [
-                "--cfg",
-                "${input:configFile}"
-            ],
+            "program": "${workspaceFolder}/motion_imitation/motion_im.py",
             "console": "integratedTerminal"
         },
         {
@@ -36,7 +34,7 @@
             "request": "launch",
             "name": "Launch vis_im.py",
             "python":"/home/xliu227/miniconda3/envs/rfc/bin/python", 
-            "program": "${workspaceFolder}/normalitation/vis_im.py",
+            "program": "${workspaceFolder}/motion_imitation/vis_im.py",
             "args": [
                 "--cfg",
                 "${input:configFile}"
