--- a/motion_imitation/cfg/0202.yml
+++ b/motion_imitation/cfg/0202.yml
@@ -13,7 +13,7 @@ policy_weightdecay: 0.0
 value_htype: relu
 value_hsize: [512, 256]
 value_optimizer: 'Adam'
-value_lr: 3.e-4
+value_lr: 1.e-3 #3.e-4
 value_momentum: 0.0
 value_weightdecay: 0.0
 clip_epsilon: 0.2
@@ -27,12 +27,14 @@ seed: 1
 save_model_interval: 100
 reward_id: 'local_rfc_implicit'
 reward_weights:
-  w_p: 0.5
+  w_p: 0.0 #0.5
   w_v: 0.0
   w_e: 0.3
-  w_rp: 0.15 #0.05
+  w_rp: 0.0 #0.05 
   w_rv: 0.1
   w_vf: 0.05
+  w_grf: 500 #0.3
+
   k_p: 2
   k_v: 0.005
   k_e: 20
