--- a/motion_imitation/cfg/0202_wo_phase.yml
+++ b/motion_imitation/cfg/0202_wo_phase.yml
@@ -52,7 +52,7 @@ env_episode_len: 200
 env_term_body: 'root'
 env_expert_trail_steps: 10
 obs_coord: 'heading'
-obs_phase: true
+obs_phase: false
 root_deheading: true
 
 # RFC parameters
@@ -98,7 +98,7 @@ joint_params:
   - ["rhumerus_x"     ,  400.0,  40.0,   0.0, 1.0, 100.0]
   - ["rradius_x"      ,  300.0,  30.0,  45.0, 5.0,  60.0]
 
-body_params: # weight for reward calculation in 
+body_params:
   # ["name","diff weight"]
   - ["lfemur"       , 1.0]
   - ["ltibia"       , 1.0]
