--- a/motion_imitation/cfg/0202_prothesis.yml
+++ b/motion_imitation/cfg/0202_prothesis.yml
@@ -1,6 +1,7 @@
 # data
 motion_id: '02_02'
-
+H: 1.75 # the code is designed that if H is negative, the default value will be used
+M: 75.0
 # training parameters
 gamma: 0.95
 tau: 0.95
