--- a/motion_imitation/cfg/6910.yml
+++ b/motion_imitation/cfg/6910.yml
@@ -1,7 +1,8 @@
 # data
 motion_id: '69_10'
-H: -1.75 # the code is designed that if H is negative, the default value will be used
-M: -75.0
+H: 1.75 # the code is designed that if H is negative, the default value will be used
+M: 75.0
+osl: False
 # training parameters
 gamma: 0.95
 tau: 0.95
@@ -52,7 +53,7 @@ env_episode_len: 200
 env_term_body: 'root'
 env_expert_trail_steps: 10
 obs_coord: 'heading'
-obs_phase: true
+obs_phase: false
 root_deheading: true
 
 # RFC parameters
