--- a/motion_imitation/cfg/02XX.yml
+++ b/motion_imitation/cfg/02XX.yml
@@ -30,13 +30,13 @@ seed: 1
 save_model_interval: 100
 reward_id: 'local_rfc_implicit'
 reward_weights:
-  w_p: 0.5 #0.5
-  w_v: 0.0
-  w_e: 0.3
-  w_rp: 0.05 #0.05 
-  w_rv: 0.1
-  w_vf: 0.05
-  w_grf: 0.0 #0.3
+  w_p: 0.5 #0.5 # qpos error 
+  w_v: 0.0 # qvel error
+  w_e: 0.3 # ee error
+  w_rp: 0.1 #0.05 # root pose error # change it to enhance balance
+  w_rv: 0.1 # root vel error
+  w_vf: 0.05 # virtual force error
+  w_grf: 0.0 #0.3 # ground reaction force error
 
   k_p: 2
   k_v: 0.005
